--- a/templates/configmaps/elasticsearch-clear-indexes.yaml
+++ b/templates/configmaps/elasticsearch-clear-indexes.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.elasticsearchClearIndexes.job.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,6 +7,9 @@ metadata:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-2"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    {{- if .Values.commonAnnotations }}
+    {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+    {{- end }}
 data:
   elasticsearch-clear-indexes.sh: |
     #!/bin/bash
@@ -32,3 +36,4 @@ data:
         curl -XDELETE $ELK_SHEME://$ELK_HOST:$ELK_PORT/files_file
       fi
     fi
+{{- end }}
